api documentation added and few more test cases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,17 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=20000
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
+
+# Enable OpenAPI JSON endpoint
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+
+# Enable Swagger UI
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Optional UI enhancements
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.doc-expansion=none
